fix: windows offline has double scroll

--- a/src/pages/WorkSpace/TestUpload/index.less
+++ b/src/pages/WorkSpace/TestUpload/index.less
@@ -1,5 +1,5 @@
 .TestUpload_root {
-  overflow-y: scroll;
+  // overflow-y: scroll;
   background: #fff;
 
   // 覆盖原tabs样式
